<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_reg"
            android:textSize="50dp"
            android:fontFamily="@font/letra"
            android:layout_margin="5dp"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="Login.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/nombreET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombres"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:fontFamily="@font/letra"
                android:textSize="20dp"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/correoET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_reg"
                android:drawableStart="@drawable/ic_correo"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:fontFamily="@font/letra"
                android:textSize="20dp"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/contraseET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contraseña_reg"
                android:drawableStart="@drawable/ic_pass"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:fontFamily="@font/letra"
                android:textSize="20dp"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/conf_contraseñaET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmar_con"
                android:drawableStart="@drawable/ic_pass"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:fontFamily="@font/letra"
                android:textSize="20dp"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Btn_Registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Btn_Registro"
            android:fontFamily="@font/letra"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/tengo_cuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/login"
            android:fontFamily="@font/letra"
            android:paddingTop="10dp"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>