<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.LoginActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_Log"
            android:textSize="50dp"
            android:fontFamily="@font/letra"
            android:layout_margin="5dp"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="Usuario.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/CorreoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_login"
                android:drawableStart="@drawable/ic_correo"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:fontFamily="@font/letra"
                android:textSize="20dp"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/ContraseñaLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contraseña_login"
                android:drawableStart="@drawable/ic_pass"
                android:drawablePadding="10dp"
                android:padding="20dp"
                android:fontFamily="@font/letra"
                android:textSize="20dp"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Btn_ingresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Btn_Ingresar"
            android:fontFamily="@font/letra"
            android:textSize="20dp"/>

        <TextView
            android:id="@+id/Notienecuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="@string/registro"
            android:fontFamily="@font/letra"
            android:paddingTop="10dp"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>